...
    <string name="loginEmailHint">E-mail address</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginBtnText">Log In</string>
    <string name="loginSignupBtnText">Create an account</string>
    <string name="loginGuestmodeBtnText">Use in guest mode</string>
    <string name="appLogoDesc">Kandle logo</string>
    <string name="loginPasswordRequired">Please enter a password</string>
    <string name="loginEmailRequired">Please enter an email address</string>
    <string name="loginSuccess">You are now logged in</string>
    <string name="loginFailPasswordError">Wrong credentials</string>
    <string name="loginFailEmailError">Wrong credentials</string>
    <string name="loginInProgress">Logging in</string>

    <!-- Register -->
...
