...
            android:id="@+id/map_support"
            android:checked="true"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/map_item" />

        <item
            android:id="@+id/your_posts"
            android:icon="@drawable/ic_whatshot_24dp"
            android:title="@string/your_posts_item" />

        <item
            android:id="@+id/follow"
            android:icon="@drawable/ic_addpost"
...
                        android:title="@string/settings_item" />
                    <item
                        android:id="@+id/about"
                        android:icon="@drawable/ic_about_24dp"
                        android:title="@string/about_us_item" />
                    <item
                        android:id="@+id/logout"
                        android:icon="@drawable/ic_logout_black_24dp"
                        android:title="@string/logout_item" />
                </group>
            </menu>
        </item>
    </group>
...
