<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/post_background">

    <TextView
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:text="This is a popup window."
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="Posted image"
        android:scaleType="centerInside"
        android:visibility="gone" />

</RelativeLayout>

